--- a/src/components/Products/index.css
+++ b/src/components/Products/index.css
@@ -3,32 +3,50 @@
     justify-content: center;
     align-items: center;
     width: 60vw;
-    height: 90vh;
+    height: 100vh;
     margin: auto; /* Center the container horizontally */
     position: relative;
     overflow: hidden; /* Hide overflowing content */
   }
+  .hovertext{
+    position:absolute;
+    margin-top:20%;
+    margin-left:40%;  
+    color:rgb(243, 134, 10);
+    font-size:20px;
+    font-weight:bold;
+    background-color: rgba(80, 79, 79, 0.5); 
+    padding:10px;
+  
+  }
+  .mg{
+    height:35px;
+  
+  }
+ 
   .main{
     display:flex;
     height:100vh;
     margin-top:50px;
     align-items:center;
   }
+ 
+ 
   
   .text {
     position: absolute;
-    top: 54%;
+    top:54%;
     font-weight:bold;
     padding:10px;
     font-size:20px;
     background-color: rgba(44, 43, 43, 0.5); 
-    color:orange;
+    color:rgb(206, 50, 2);
     left: 20%;
    
     opacity: 0;
     transition: opacity 0.7s;
   }
-  .web{
+  #web{
     text-decoration: none;
     color:white;
   }
@@ -48,18 +66,27 @@
   @media (max-width: 768px) {
     .carousel-container {
       width: 90vw;
-      height: 60vh;
+      height: 70vh;
     }
   
     .text {
-      top: 40%;
+      top: 36%;
       font-size: 7px;
-      left:40%;
+      left:43%;
+      width:80%;
       transform: translateX(-50%);
     }
     .text button{
       
       font-size:10px;
       padding:4px;
+    }
+    .hovertext{
+      font-size:10px;
+    }
+    #web{
+      font-size:10px;
+      width:20px;
+
     }
   }
